force-app/main/default/objects/AML_Rule_Violation_Event__e/AML_Rule_Violation_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event will be used to accept aml rules and run business logic on customer and case records.</description>
    <label>AML Rule Violation Event</label>
    <pluralLabel>AML Rule Violation Events</pluralLabel>
</CustomObject>