force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/Account_Lock__c.field-meta.xml
<CustomField>
    <fullName>Account_Lock__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use this field to lock customer account when a particular AML rule violated</description>
    <label>Account Lock</label>
    <type>Checkbox</type>
</CustomField>