force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/Analisys_Code__c.field-meta.xml
<CustomField>
    <fullName>Analisys_Code__c</fullName>
    <label>Analisys Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>