force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/ANZ_Provided_Name__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Provided_Name__c</fullName>
    <description>Customers bank account name, which is provided us by ANZ bank.</description>
    <label>ANZ Provided Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>