force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Hold the number of bank account that deposits the money, but money needs to returned.</description>
    <label>Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>