force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/Bank_Provided_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Provided_Name__c</fullName>
    <description>Name of customer, provided by the bank.</description>
    <label>Bank Provided Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>