force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/Cloudcheck_Pass__c.field-meta.xml
<CustomField>
    <fullName>Cloudcheck_Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cloudcheck Pass or Fail.</description>
    <label>Cloudcheck Pass</label>
    <type>Checkbox</type>
</CustomField>