force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/Cloudcheck_URL__c.field-meta.xml
<CustomField>
    <fullName>Cloudcheck_URL__c</fullName>
    <description>Cloudcheck report URL to add it to Account record.</description>
    <label>Cloudcheck URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>