force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>To store transaction reference.</description>
    <label>Reference</label>
    <length>12</length>
    <type>Text</type>
</CustomField>