force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <label>Rule Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>