force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source system. eg. Cloudcheck or AML</description>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>