force-app/main/default/objects/AML_Rule_Violation_Event__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>37</length>
    <type>Text</type>
</CustomField>